# heartlands-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: .env.template  main.py
app/shared/: __init__.py  firestore.py  firestore_session.py  interaction_log.py  localize.py  tenant_config.py
app/soar_orchestrator/: __init__.py  agent.py  personas.py  tools.py
app/soar_orchestrator/subagents/: __init__.py  ephemeral.py  session_owning.py
app/static/: index.html  landing.html
app/static/js/: app.js  audio-recorder.js  render-layers.js
tests/: test_hitl.py  test_render_contract.py  test_tenant_config.py
